--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,5 +1,5 @@
 .home__container {
-  row-gap: 7rem;
+  row-gap: 6rem;
 }
 .home__content {
   grid-template-columns: 116px repeat(2, 1fr);
@@ -65,23 +65,24 @@
   justify-self: center;
   width: 300px;
   height: 300px;
-  animation: profile__animate 6s ease infinite 1s;
+  animation: profile__animate 4s ease-in-out infinite 1s;
 }
 
 @keyframes profile__animate {
   0% {
-    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    border-radius: 60% 40% 30% 50%/60% 30% 70% 40%;
   }
   50% {
     border-radius: 40% 60% 60% 40%/50% 60% 50% 60%;
   }
   100% {
-    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    border-radius: 60% 40% 30% 50%/60% 30% 70% 40%;
   }
 }
 
 .home__scroll {
-  margin-left: 9.25rem;
+  margin-left: 46.3rem;
+
 }
 
 .wheel {
